src/test/deca/context/invalid/cast-impossible.deca
class A {
	int jaj(){
	return 4;
	}
}

class B {
	int jaj(){
	return 6;
}
}


{ B b = new B();
 A z = (A)(b);
 println(z.jaj());
 println(b.jaj());
}

